--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,10 +11,4 @@ jobs:
             - name: Run a one-line script
               run: ./generate.sh
             - name: Deploy to gh-pages
-              run: |
-                  git config --global user.email "hi@sri.so"
-                  git config --global user.name "sricola"
-                  git remote set-url origin https://$GH_PAT@github.com/sricola/sri.fyi.git
-                  git add .
-                  git commit -m "new links"
-                  git push origin gh-pages
+              run: ./deploy.sh
